--- a/app/src/main/res/layout/activity_pair_level1.xml
+++ b/app/src/main/res/layout/activity_pair_level1.xml
@@ -1,91 +1,75 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/GridLayout1"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:columnCount="21"
-    android:orientation="vertical"
-    android:rowCount="25"
-    tools:context=".GridXMLActivity" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="right|top"
-        android:layout_row="3"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton1"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_alignTop="@+id/imageButton6"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="right|top"
-        android:layout_row="24"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton2"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_alignTop="@+id/imageButton5"
+        android:layout_toRightOf="@+id/imageButton5"
+        android:layout_toEndOf="@+id/imageButton5" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="left|top"
-        android:layout_row="3"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton3"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imageButton2"
+        android:layout_toEndOf="@+id/imageButton2" />
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="left|top"
-        android:layout_row="24"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton4"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="44dp"
+        android:layout_below="@+id/imageButton2"
+        android:layout_toRightOf="@+id/imageButton6"
+        android:layout_toEndOf="@+id/imageButton6" />
 
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_row="3"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton5"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_row="24"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton6"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_alignTop="@+id/imageButton4"
+        android:layout_alignLeft="@+id/imageButton2"
+        android:layout_alignStart="@+id/imageButton2" />
 
     <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next Level"
         android:id="@+id/next"
-        android:layout_width="117dp"
-        android:layout_column="20"
-        android:layout_gravity="left|center_vertical"
-        android:layout_row="24"
-        android:text="Next Level" />
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/imageButton6"
+        android:layout_alignStart="@+id/imageButton6"
+        />
 
-</GridLayout>
+
+
+</RelativeLayout>
