--- a/app/src/main/res/layout/activity_pair_level2.xml
+++ b/app/src/main/res/layout/activity_pair_level2.xml
@@ -1,173 +1,129 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/GridLayout1"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:columnCount="22"
-    android:orientation="vertical"
-    android:rowCount="50"
-    tools:context=".GridXMLActivity" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.user.pairgamelevel1.PairGameL2">
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="left|top"
-        android:layout_row="4"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imageButton8"
+        android:layout_toEndOf="@+id/imageButton8"
+        android:layout_marginTop="42dp" />
 
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_row="4"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton7"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_alignTop="@+id/imageButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="right|top"
-        android:layout_row="4"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton8"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_alignTop="@+id/imageButton"
+        android:layout_toRightOf="@+id/imageButton7"
+        android:layout_toEndOf="@+id/imageButton7" />
 
-    <Space
-        android:layout_width="1dp"
-        android:layout_height="15dp" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="left|top"
-        android:layout_row="5"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton9"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_below="@+id/imageButton"
+        android:layout_alignLeft="@+id/imageButton"
+        android:layout_alignStart="@+id/imageButton1" />
 
-    <Button
-        android:id="@+id/button12"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_row="5"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton10"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_below="@+id/imageButton14"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="right|top"
-        android:layout_row="5"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton11"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_alignTop="@+id/imageButton9"
+        android:layout_toLeftOf="@+id/imageButton9"
+        android:layout_toStartOf="@+id/imageButton9" />
 
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="left|top"
-        android:layout_row="28"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton12"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_below="@+id/imageButton15"
+        android:layout_toLeftOf="@+id/imageButton13"
+        android:layout_toStartOf="@+id/imageButton13" />
 
-    <Space
-        android:layout_width="1dp"
-        android:layout_height="15dp" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="left|top"
-        android:layout_row="6"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton13"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_below="@+id/imageButton17"
+        android:layout_alignLeft="@+id/imageButton17"
+        android:layout_alignStart="@+id/imageButton17" />
 
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_row="6"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton14"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_below="@+id/imageButton16"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_row="28"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton15"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_below="@+id/imageButton9"
+        android:layout_toLeftOf="@+id/imageButton17"
+        android:layout_toStartOf="@+id/imageButton17" />
 
-    <Button
-        android:id="@+id/button11"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="right|top"
-        android:layout_row="6"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton16"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_alignTop="@+id/imageButton11"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="79sp"
-        android:layout_height="55sp"
-        android:layout_column="20"
-        android:layout_gravity="right|top"
-        android:layout_row="28"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton17"
         android:background="@drawable/button"
-        android:textColor="#ffffff"
-        android:textSize="28sp"
-        android:textStyle="bold" />
+        android:layout_below="@+id/imageButton9"
+        android:layout_alignLeft="@+id/imageButton9"
+        android:layout_alignStart="@+id/imageButton9" />
+
+
 
     <Button
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Button"
-        android:id="@+id/button13"
-        android:onClick="endActivity"
-        android:layout_row="49"
-        android:layout_column="21" />
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="159dp" />
 
-</GridLayout>
+</RelativeLayout>
