--- a/app/src/main/res/layout/activity_pair_level2.xml
+++ b/app/src/main/res/layout/activity_pair_level2.xml
@@ -124,6 +124,7 @@
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="159dp" />
+        android:layout_marginBottom="159dp"
+        android:onClick="endActivity"/>
 
 </RelativeLayout>
