--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -4,20 +4,105 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Intro"
+    android:background="@drawable/main_bg"
+    android:clipToPadding="false"
     >
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-         />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
 
-    <Button
-        android:layout_width="wrap_content"
+        android:layout_marginRight="-160dp"
+        android:layout_marginLeft="-10dp"
+        android:clipToPadding="false"
+        android:id="@+id/main_bg_rl"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+
+            android:id="@+id/main_bg_imageView"
+            android:src="@drawable/main_bg_box"
+
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:clipToPadding="false"
+            android:layout_gravity="center"/>
+
+
+        <Button
+            android:layout_width="190dp"
+            android:layout_height="70dp"
+            android:text="START"
+            android:id="@+id/button"
+            android:onClick="endActivity"
+            android:gravity="center|center_horizontal|fill_vertical"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="71dp"
+
+            android:layout_marginBottom="209dp"
+            android:layout_marginStart="71dp"
+            android:layout_alignBottom="@+id/main_bg_imageView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+    </RelativeLayout>
+
+
+
+
+    <RelativeLayout
+
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="endActivity"/>
+        android:layout_marginBottom="-30dp"
+        android:layout_alignParentBottom="true">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            >
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight=".70"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView3"
+
+                android:src="@drawable/main_seaco"
+                />
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".30"
+                android:gravity="center_vertical"
+
+                >
+                <Button
+
+                    android:layout_width="fill_parent"
+
+                    android:layout_height="wrap_content"
+                    android:text="Records"
+                    android:id="@+id/button7"
+
+                    />
+
+                <Button
+                    android:layout_below="@+id/button7"
+                    android:layout_width="fill_parent"
+
+                    android:layout_height="wrap_content"
+                    android:text="About"
+                    android:id="@+id/button8"
+                    />
+            </RelativeLayout>
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
