--- a/app/src/main/res/layout/activity_pair_intro.xml
+++ b/app/src/main/res/layout/activity_pair_intro.xml
@@ -10,12 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1">
-    <LinearLayout
-        android:layout_width="30dp"
-        android:layout_height="10dp"
-        android:layout_weight="0.2"
+        <LinearLayout
+            android:layout_width="30dp"
+            android:layout_height="10dp"
+            android:layout_weight="0.5"
 
-        android:background="#ff2e30fb"/>
+            android:background="#ff2e30fb"/>
     </LinearLayout>
 
 
@@ -26,13 +26,13 @@
         android:layout_marginRight="30dp">
 
         <TextView
-        android:layout_marginTop="20dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:gravity="start"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/prospective_header"
+            android:layout_marginTop="20dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:gravity="start"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/pair_intro_title"
             />
 
         <TextView
@@ -42,67 +42,36 @@
             android:gravity="end"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/prospective_header_count"/></RelativeLayout>
+            android:text="@string/pair_header_count"/></RelativeLayout>
 
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:gravity="center">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id = "@+id/image_layout"
-            android:layout_centerHorizontal="true">
+
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
                 android:id="@+id/imageView_1"
+                android:src="@drawable/pairs_intro_hero"
                 android:layout_gravity="top|center"
-
-                android:scaleType="fitXY"
-                />
-
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:id="@+id/imageView_2"
-                android:layout_gravity="top|center"
-
-                android:scaleType="fitXY"
-                android:layout_toRightOf="@+id/imageView_1"/>
-
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:id="@+id/imageView_3"
-                android:layout_gravity="top|center"
-
-                android:scaleType="fitXY"
-                android:layout_toRightOf="@+id/imageView_2"/>
-
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:id="@+id/imageView_4"
-                android:layout_gravity="top|center"
-
-                android:scaleType="fitXY"
-                android:layout_toRightOf="@+id/imageView_3"/>
+                android:layout_centerHorizontal="true"
+               />
 
 
 
-        </RelativeLayout>
 
         <TextView
-            android:layout_below="@id/image_layout"
+            android:layout_below="@id/imageView_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/prospective_memory_test"
+            android:text="@string/pair_intro_title"
             android:id="@+id/textView"
             android:layout_centerHorizontal="true"
             android:textSize="30sp"
@@ -118,7 +87,7 @@
             android:paddingTop="35dp"
             android:paddingBottom="35dp"
 
-            android:text="@string/prospective_initial_text"
+            android:text="@string/pair_intro_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#ff000000"
