--- a/app/src/main/res/layout/activity_pair_level1.xml
+++ b/app/src/main/res/layout/activity_pair_level1.xml
@@ -1,15 +1,63 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
+
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1">
+        <LinearLayout
+            android:layout_width="30dp"
+            android:layout_height="10dp"
+            android:layout_weight="0.5"
+
+            android:background="#ff2e30fb"/>
+    </LinearLayout>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:id="@+id/pair_level_header">
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:gravity="start"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/pair_intro_title"
+            />
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:gravity="end"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/pair_header_count"/></RelativeLayout>
+
+
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/cards_array">
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton1"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_alignTop="@+id/imageButton6"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -18,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton2"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_alignTop="@+id/imageButton5"
         android:layout_toRightOf="@+id/imageButton5"
         android:layout_toEndOf="@+id/imageButton5" />
@@ -27,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton3"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/imageButton2"
         android:layout_toEndOf="@+id/imageButton2" />
@@ -36,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton4"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_marginTop="44dp"
         android:layout_below="@+id/imageButton2"
         android:layout_toRightOf="@+id/imageButton6"
@@ -46,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton5"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -55,20 +103,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton6"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_alignTop="@+id/imageButton4"
         android:layout_alignLeft="@+id/imageButton2"
         android:layout_alignStart="@+id/imageButton2" />
 
+    </RelativeLayout>
+
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Next Level"
         android:id="@+id/next"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/imageButton6"
-        android:layout_alignStart="@+id/imageButton6"
+        android:background="@drawable/button_green_res"
+
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/pair_help_text"
+        android:paddingBottom="25dp"
+        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/cards_array"
+        android:textSize="30sp"/>
 
 
 
