--- a/app/src/main/res/layout/activity_pair_level2.xml
+++ b/app/src/main/res/layout/activity_pair_level2.xml
@@ -1,16 +1,62 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
+
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.user.pairgamelevel1.PairGameL2">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1">
+        <LinearLayout
+            android:layout_width="30dp"
+            android:layout_height="10dp"
+            android:layout_weight="0.5"
+
+            android:background="#ff2e30fb"/>
+    </LinearLayout>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:id="@+id/pair_level_header">
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:gravity="start"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/pair_intro_title"
+            />
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:gravity="end"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/pair_header_count"/></RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/cards_array">
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/imageButton8"
         android:layout_toEndOf="@+id/imageButton8"
@@ -20,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton7"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_alignTop="@+id/imageButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -29,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton8"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_alignTop="@+id/imageButton"
         android:layout_toRightOf="@+id/imageButton7"
         android:layout_toEndOf="@+id/imageButton7" />
@@ -38,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton9"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_below="@+id/imageButton"
         android:layout_alignLeft="@+id/imageButton"
         android:layout_alignStart="@+id/imageButton1" />
@@ -47,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton10"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_below="@+id/imageButton14"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -56,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton11"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_alignTop="@+id/imageButton9"
         android:layout_toLeftOf="@+id/imageButton9"
         android:layout_toStartOf="@+id/imageButton9" />
@@ -65,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton12"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_below="@+id/imageButton15"
         android:layout_toLeftOf="@+id/imageButton13"
         android:layout_toStartOf="@+id/imageButton13" />
@@ -74,7 +120,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton13"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_below="@+id/imageButton17"
         android:layout_alignLeft="@+id/imageButton17"
         android:layout_alignStart="@+id/imageButton17" />
@@ -83,7 +129,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton14"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_below="@+id/imageButton16"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -92,7 +138,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton15"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_below="@+id/imageButton9"
         android:layout_toLeftOf="@+id/imageButton17"
         android:layout_toStartOf="@+id/imageButton17" />
@@ -101,7 +147,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton16"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_alignTop="@+id/imageButton11"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -110,21 +156,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton17"
-        android:background="@drawable/button"
+        android:background="@drawable/blue_card"
         android:layout_below="@+id/imageButton9"
         android:layout_alignLeft="@+id/imageButton9"
         android:layout_alignStart="@+id/imageButton9" />
 
-
+    </RelativeLayout>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:text="NEXT"
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="159dp"
-        android:onClick="endActivity"/>
+        android:layout_marginTop="30dp"
+        android:onClick="endActivity"
+        android:layout_below="@id/cards_array"
+
+        android:background="@drawable/button_green_res"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/pair_help_text"
+        android:paddingBottom="25dp"
+        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/cards_array"
+        android:textSize="30sp"/>
 
 </RelativeLayout>
