--- a/app/src/main/res/layout/activity_pair_intro.xml
+++ b/app/src/main/res/layout/activity_pair_intro.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="30dp"
             android:layout_height="10dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.4"
 
             android:background="#ff2e30fb"/>
     </LinearLayout>
@@ -112,6 +112,20 @@
             android:onClick="nextActivity"
             android:textColor="@android:color/white"
             android:textSize="30dp" />
+
+        <Button android:id="@+id/next2_button"
+            android:background="@drawable/button_pink_res"
+            android:layout_marginTop="20dp"
+            android:layout_width="200dp"
+            android:layout_height="80dp"
+            android:text="@string/button_skip"
+            android:gravity="center|center_horizontal|fill_vertical"
+            android:layout_gravity="center"
+            android:layout_below="@+id/next_button"
+            android:layout_centerHorizontal="true"
+            android:onClick="skipActivity"
+            android:textColor="@android:color/white"
+            android:textSize="20dp" />
 
     </RelativeLayout>
 
