Change windows layout to:- 1 1 0 0     1 1 1 0     1 1 1 1 1 1 0 0     1 1 1 0     1 1 1 1 0 0 0 0     1 1 1 0     1 1 1 1 0 0 0 0     0 0 0 0     1 1 1 1

--- a/app/src/main/res/layout/activity_lights_main.xml
+++ b/app/src/main/res/layout/activity_lights_main.xml
@@ -3,8 +3,6 @@
     tools:context=".MainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-
     android:paddingBottom="@dimen/activity_vertical_margin" >
 
     <ImageView
@@ -16,14 +14,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:adjustViewBounds="true"
-        android:gravity="top|center"/>
+        android:gravity="top|center" />
 
     <RelativeLayout
         android:id="@+id/lights_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp">
+        android:layout_marginRight="30dp" >
 
         <TextView
             android:layout_marginTop="20dp"
@@ -33,8 +31,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/lights_title"
-            android:textColor="@android:color/white"
-            />
+            android:textColor="@android:color/white" />
 
         <TextView
             android:layout_marginTop="20dp"
@@ -44,14 +41,17 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/seaco"
-            android:textColor="@android:color/white"/></RelativeLayout>
-
-
+            android:textColor="@android:color/white" />
+    </RelativeLayout>
 
 <RelativeLayout
+    android:id="@+id/windowsLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:layout_marginTop="150dp"
+    android:layout_marginStart="100dp"
+    android:layout_marginLeft="100dp" >
 
     <ImageButton android:id="@+id/window01"
         android:layout_width="wrap_content"
@@ -65,8 +65,7 @@
         android:background="@null"
         android:contentDescription="@string/window1"
         android:src="@drawable/light_off"
-        android:visibility="gone"
-        />
+        android:visibility="gone" />
 
     <ImageButton android:id="@+id/window02"
         android:layout_width="wrap_content"
@@ -87,9 +86,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/window02"
-        android:layout_alignLeft="@+id/window02"
-        android:layout_marginTop="@dimen/start_y"
+        android:layout_alignTop="@+id/window02"
+        android:layout_alignStart="@+id/window04"
+        android:layout_alignLeft="@+id/window04"
+        android:layout_marginTop="@dimen/space_y"
         android:layout_marginStart="@dimen/space_x"
         android:layout_marginLeft="@dimen/space_x"
         android:background="@null"
@@ -101,12 +101,12 @@
     <ImageButton android:id="@+id/window04"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/window03"
-        android:layout_alignLeft="@+id/window03"
-        android:layout_marginTop="@dimen/start_y"
-        android:layout_marginStart="@dimen/space_x"
-        android:layout_marginLeft="@dimen/space_x"
+        android:layout_alignTop="@+id/window01"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="@dimen/space_y"
+        android:layout_marginStart="@dimen/start_x"
+        android:layout_marginLeft="@dimen/start_x"
         android:background="@null"
         android:contentDescription="@string/window4"
         android:src="@drawable/light_off"
@@ -116,12 +116,12 @@
     <ImageButton android:id="@+id/window05"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window01"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="@dimen/space_y"
-        android:layout_marginStart="@dimen/start_x"
-        android:layout_marginLeft="@dimen/start_x"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/window02"
+        android:layout_alignLeft="@+id/window02"
+        android:layout_marginTop="@dimen/start_y"
+        android:layout_marginStart="@dimen/space_x"
+        android:layout_marginLeft="@dimen/space_x"
         android:background="@null"
         android:contentDescription="@string/window5"
         android:src="@drawable/light_off"
@@ -131,9 +131,9 @@
     <ImageButton android:id="@+id/window06"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window02"
-        android:layout_alignStart="@+id/window05"
-        android:layout_alignLeft="@+id/window05"
+        android:layout_alignTop="@+id/window05"
+        android:layout_alignStart="@+id/window03"
+        android:layout_alignLeft="@+id/window03"
         android:layout_marginTop="@dimen/space_y"
         android:layout_marginStart="@dimen/space_x"
         android:layout_marginLeft="@dimen/space_x"
@@ -146,9 +146,9 @@
     <ImageButton android:id="@+id/window07"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window03"
-        android:layout_alignStart="@+id/window06"
-        android:layout_alignLeft="@+id/window06"
+        android:layout_alignTop="@+id/window06"
+        android:layout_alignStart="@+id/window08"
+        android:layout_alignLeft="@+id/window08"
         android:layout_marginTop="@dimen/space_y"
         android:layout_marginStart="@dimen/space_x"
         android:layout_marginLeft="@dimen/space_x"
@@ -161,9 +161,9 @@
     <ImageButton android:id="@+id/window08"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window04"
-        android:layout_alignStart="@+id/window07"
-        android:layout_alignLeft="@+id/window07"
+        android:layout_alignTop="@+id/window03"
+        android:layout_alignStart="@+id/window09"
+        android:layout_alignLeft="@+id/window09"
         android:layout_marginTop="@dimen/space_y"
         android:layout_marginStart="@dimen/space_x"
         android:layout_marginLeft="@dimen/space_x"
@@ -176,7 +176,7 @@
     <ImageButton android:id="@+id/window09"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window05"
+        android:layout_alignTop="@+id/window04"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="@dimen/space_y"
@@ -191,10 +191,10 @@
     <ImageButton android:id="@+id/window10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window06"
-        android:layout_alignStart="@+id/window09"
-        android:layout_alignLeft="@+id/window09"
-        android:layout_marginTop="@dimen/space_y"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/window05"
+        android:layout_alignLeft="@+id/window05"
+        android:layout_marginTop="@dimen/start_y"
         android:layout_marginStart="@dimen/space_x"
         android:layout_marginLeft="@dimen/space_x"
         android:background="@null"
@@ -206,9 +206,9 @@
     <ImageButton android:id="@+id/window11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window07"
-        android:layout_alignStart="@+id/window10"
-        android:layout_alignLeft="@+id/window10"
+        android:layout_alignTop="@+id/window10"
+        android:layout_alignStart="@+id/window06"
+        android:layout_alignLeft="@+id/window06"
         android:layout_marginTop="@dimen/space_y"
         android:layout_marginStart="@dimen/space_x"
         android:layout_marginLeft="@dimen/space_x"
@@ -221,9 +221,9 @@
     <ImageButton android:id="@+id/window12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window08"
-        android:layout_alignStart="@+id/window11"
-        android:layout_alignLeft="@+id/window11"
+        android:layout_alignTop="@+id/window11"
+        android:layout_alignStart="@+id/window07"
+        android:layout_alignLeft="@+id/window07"
         android:layout_marginTop="@dimen/space_y"
         android:layout_marginStart="@dimen/space_x"
         android:layout_marginLeft="@dimen/space_x"
@@ -236,12 +236,12 @@
     <ImageButton android:id="@+id/window13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window09"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/window12"
+        android:layout_alignStart="@+id/window14"
+        android:layout_alignLeft="@+id/window14"
         android:layout_marginTop="@dimen/space_y"
-        android:layout_marginStart="@dimen/start_x"
-        android:layout_marginLeft="@dimen/start_x"
+        android:layout_marginStart="@dimen/space_x"
+        android:layout_marginLeft="@dimen/space_x"
         android:background="@null"
         android:contentDescription="@string/window13"
         android:src="@drawable/light_off"
@@ -251,9 +251,9 @@
     <ImageButton android:id="@+id/window14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window10"
-        android:layout_alignStart="@+id/window13"
-        android:layout_alignLeft="@+id/window13"
+        android:layout_alignTop="@+id/window07"
+        android:layout_alignStart="@+id/window15"
+        android:layout_alignLeft="@+id/window15"
         android:layout_marginTop="@dimen/space_y"
         android:layout_marginStart="@dimen/space_x"
         android:layout_marginLeft="@dimen/space_x"
@@ -266,9 +266,9 @@
     <ImageButton android:id="@+id/window15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window11"
-        android:layout_alignStart="@+id/window14"
-        android:layout_alignLeft="@+id/window14"
+        android:layout_alignTop="@+id/window08"
+        android:layout_alignStart="@+id/window16"
+        android:layout_alignLeft="@+id/window16"
         android:layout_marginTop="@dimen/space_y"
         android:layout_marginStart="@dimen/space_x"
         android:layout_marginLeft="@dimen/space_x"
@@ -281,12 +281,12 @@
     <ImageButton android:id="@+id/window16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/window12"
-        android:layout_alignStart="@+id/window15"
-        android:layout_alignLeft="@+id/window15"
+        android:layout_alignTop="@+id/window09"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="@dimen/space_y"
-        android:layout_marginStart="@dimen/space_x"
-        android:layout_marginLeft="@dimen/space_x"
+        android:layout_marginStart="@dimen/start_x"
+        android:layout_marginLeft="@dimen/start_x"
         android:background="@null"
         android:contentDescription="@string/window16"
         android:src="@drawable/light_off"
