Declare bluetooth permission, added About App dialog, minor cleanup

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -70,6 +70,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/intro_about_button"
                     android:id="@+id/button8"
+                    android:onClick="onAboutClicked"
                     />
             </RelativeLayout>
         </LinearLayout>
